{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 17,
  "lineage": "47be15a0-c352-cf41-37fd-9945f80a949f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0b1d08f2ec1492c71",
            "domain": "vpc",
            "id": "eipalloc-019f1eb43cd49d34d",
            "instance": "i-076fd6785c008f512",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01e22c17fbb254201",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-187-186-91.us-west-2.compute.amazonaws.com",
            "public_ip": "54.187.186.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Prod-eip"
            },
            "tags_all": {
              "Name": "Prod-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "aws_internet_gateway.my-gw",
            "aws_network_interface.my-nic",
            "aws_security_group.sg1",
            "aws_subnet.my-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d5c68bab01f3496",
            "arn": "arn:aws:ec2:us-west-2:809801096875:instance/i-076fd6785c008f512",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076fd6785c008f512",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-01e22c17fbb254201"
              }
            ],
            "primary_network_interface_id": "eni-01e22c17fbb254201",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "54.187.186.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0809f4f01bd6fab91",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbd9a61648651737",
            "tags": {
              "Name": "my EC2"
            },
            "tags_all": {
              "Name": "my EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0465262d61f9c68f1"
            ]
          },
          "dependencies": [
            "aws_network_interface.my-nic",
            "aws_security_group.sg1",
            "aws_subnet.my-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:internet-gateway/igw-0c3f47c1f6ad2adfa",
            "id": "igw-0c3f47c1f6ad2adfa",
            "owner_id": "809801096875",
            "tags": {
              "Name": "prod-gateway"
            },
            "tags_all": {
              "Name": "prod-gateway"
            },
            "vpc_id": "vpc-0b707d74da2d479f5"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-00d12779aa8fc24ea",
                "device_index": 0,
                "instance": "i-076fd6785c008f512"
              }
            ],
            "id": "eni-01e22c17fbb254201",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:7c:14:03:c5:25",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0465262d61f9c68f1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbd9a61648651737"
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.my-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:route-table/rtb-00df97adfb6a24757",
            "id": "rtb-00df97adfb6a24757",
            "owner_id": "809801096875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3f47c1f6ad2adfa",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3f47c1f6ad2adfa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-route"
            },
            "tags_all": {
              "Name": "prod-route"
            },
            "vpc_id": "vpc-0b707d74da2d479f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc",
            "aws_internet_gateway.my-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068990daf78868fe8",
            "route_table_id": "rtb-00df97adfb6a24757",
            "subnet_id": "subnet-0dbd9a61648651737"
          },
          "dependencies": [
            "aws_route_table.my-route",
            "aws_subnet.my-subnet",
            "aws_vpc.my-vpc",
            "aws_internet_gateway.my-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:security-group/sg-0465262d61f9c68f1",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0465262d61f9c68f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg1",
            "name_prefix": "",
            "owner_id": "809801096875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b707d74da2d479f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:subnet/subnet-0dbd9a61648651737",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dbd9a61648651737",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809801096875",
            "tags": {
              "Name": "prod subnet-1"
            },
            "tags_all": {
              "Name": "prod subnet-1"
            },
            "vpc_id": "vpc-0b707d74da2d479f5"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:vpc/vpc-0b707d74da2d479f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe7a3e737c16e23c",
            "default_route_table_id": "rtb-0ff66b311a7947854",
            "default_security_group_id": "sg-07e8395b868cef44f",
            "dhcp_options_id": "dopt-be4c4fc6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b707d74da2d479f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ff66b311a7947854",
            "owner_id": "809801096875",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}